examples/test/testpolicy13542.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13542
  namespace: namespace221
spec:
  podSelector:
    matchLabels:
      key24: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value47
      podSelector:
        matchLabels:
          key10: value39
          key31: value34
          key45: value30
